overflow mistake fixed

--- a/sunstonefarms/static/css/sunstone.style.css
+++ b/sunstonefarms/static/css/sunstone.style.css
@@ -24,7 +24,6 @@
 }
 
 html, body {
-	overflow-y:hidden;
 	height:100%;
 }
 
